# horizon-proposal-analyzer

./: .env.example  .gitignore  BUSINESS.md  Dockerfile  LICENSE  README.md  analyzer.py  crucible.py  crucible_light.py  pyproject.toml  render.yaml  requirements.txt  server.py
modules/: __init__.py  grant_forms.py  horizon_europe.py  vinnova.py
tests/: test_crucible.py  test_server.py
