[project]
name = "horizon-proposal-analyzer"
version = "1.0.0"
description = "Static analysis tool for Horizon Europe proposals — detects 25 common anti-patterns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WINNIIO AB", email = "ceo@winniio.io" },
]
keywords = ["horizon-europe", "grant-writing", "proposal-review", "eu-funding", "research-funding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pymupdf>=1.24.0",
]

[project.scripts]
horizon-analyzer = "analyzer:main"

[project.urls]
Homepage = "https://github.com/Life-Atlas/horizon-proposal-analyzer"
Issues = "https://github.com/Life-Atlas/horizon-proposal-analyzer/issues"
