[project]
name = "crucible-proposal-analyzer"
version = "4.0.0"
description = "C.R.U.C.I.B.L.E. — Full Horizon Europe proposal analyzer with 45+ anti-pattern detectors, SMILE methodology, and evaluator score estimation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WINNIIO AB", email = "ceo@winniio.io" },
]
keywords = [
    "horizon-europe",
    "grant-writing",
    "proposal-review",
    "eu-funding",
    "research-funding",
    "eic-pathfinder",
    "crucible",
    "smile-methodology",
    "proposal-analyzer",
    "grant-checker",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pymupdf>=1.24.0",
]

[project.scripts]
crucible = "crucible:main"

[project.urls]
Homepage = "https://github.com/Life-Atlas/horizon-proposal-analyzer"
Issues = "https://github.com/Life-Atlas/horizon-proposal-analyzer/issues"
Documentation = "https://github.com/Life-Atlas/horizon-proposal-analyzer#readme"
